--- a/package.json
+++ b/package.json
@@ -7,15 +7,66 @@
     "start": "sirv public"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.0.0",
-    "@rollup/plugin-node-resolve": "^7.0.0",
-    "rollup": "^1.20.0",
-    "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.0.0"
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
+    "@material/elevation": "^3.1.0",
+    "@material/linear-progress": "^3.2.0",
+    "@material/theme": "^3.1.0",
+    "@material/typography": "^3.1.0",
+    "@mdi/js": "^4.8.95",
+    "node-sass": "^4.13.1",
+    "npm-run-all": "^4.1.5",
+    "postcss-scss": "^2.0.0",
+    "rollup": "^1.30.1",
+    "rollup-plugin-alias": "^2.2.0",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-postcss": "^2.0.5",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-svelte": "^5.1.1",
+    "rollup-plugin-terser": "^5.2.0",
+    "sapper": "^0.27.9",
+    "svelte": "^3.18.1",
+    "@smui/button": "1.0.0-beta.20",
+    "@smui/card": "1.0.0-beta.20",
+    "@smui/checkbox": "1.0.0-beta.20",
+    "@smui/chips": "1.0.0-beta.20",
+    "@smui/data-table": "1.0.0-beta.20",
+    "@smui/dialog": "1.0.0-beta.20",
+    "@smui/drawer": "1.0.0-beta.20",
+    "@smui/fab": "1.0.0-beta.20",
+    "@smui/floating-label": "1.0.0-beta.20",
+    "@smui/form-field": "1.0.0-beta.20",
+    "@smui/icon-button": "1.0.0-beta.20",
+    "@smui/image-list": "1.0.0-beta.20",
+    "@smui/line-ripple": "1.0.0-beta.20",
+    "@smui/linear-progress": "1.0.0-beta.20",
+    "@smui/list": "1.0.0-beta.20",
+    "@smui/menu": "1.0.0-beta.20",
+    "@smui/menu-surface": "1.0.0-beta.20",
+    "@smui/notched-outline": "1.0.0-beta.20",
+    "@smui/paper": "1.0.0-beta.20",
+    "@smui/radio": "1.0.0-beta.20",
+    "@smui/ripple": "1.0.0-beta.20",
+    "@smui/select": "1.0.0-beta.20",
+    "@smui/slider": "1.0.0-beta.20",
+    "@smui/snackbar": "1.0.0-beta.20",
+    "@smui/switch": "1.0.0-beta.20",
+    "@smui/tab": "1.0.0-beta.20",
+    "@smui/tab-bar": "1.0.0-beta.20",
+    "@smui/tab-indicator": "1.0.0-beta.20",
+    "@smui/tab-scroller": "1.0.0-beta.20",
+    "@smui/textfield": "1.0.0-beta.20",
+    "@smui/top-app-bar": "1.0.0-beta.20"
   },
   "dependencies": {
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
+    "rollup-plugin-livereload": "^1.1.0",
     "sirv-cli": "^0.4.4"
   }
 }
