--- a/package.json
+++ b/package.json
@@ -17,20 +17,6 @@
     "@material/theme": "^3.1.0",
     "@material/typography": "^3.1.0",
     "@mdi/js": "^4.8.95",
-    "node-sass": "^4.13.1",
-    "npm-run-all": "^4.1.5",
-    "postcss-scss": "^2.0.0",
-    "rollup": "^1.30.1",
-    "rollup-plugin-alias": "^2.2.0",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^2.0.5",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-svelte": "^5.1.1",
-    "rollup-plugin-terser": "^5.2.0",
-    "sapper": "^0.27.9",
-    "svelte": "^3.18.1",
     "@smui/button": "1.0.0-beta.20",
     "@smui/card": "1.0.0-beta.20",
     "@smui/checkbox": "1.0.0-beta.20",
@@ -61,7 +47,21 @@
     "@smui/tab-indicator": "1.0.0-beta.20",
     "@smui/tab-scroller": "1.0.0-beta.20",
     "@smui/textfield": "1.0.0-beta.20",
-    "@smui/top-app-bar": "1.0.0-beta.20"
+    "@smui/top-app-bar": "1.0.0-beta.20",
+    "node-sass": "^4.14.1",
+    "npm-run-all": "^4.1.5",
+    "postcss-scss": "^2.0.0",
+    "rollup": "^1.30.1",
+    "rollup-plugin-alias": "^2.2.0",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-postcss": "^2.0.5",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-svelte": "^5.1.1",
+    "rollup-plugin-terser": "^5.2.0",
+    "sapper": "^0.27.9",
+    "svelte": "^3.18.1"
   },
   "dependencies": {
     "@rollup/plugin-commonjs": "^11.0.2",
