--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material/theme": "^3.1.0",
     "@material/typography": "^3.1.0",
     "@mdi/js": "^4.8.95",
+    "@rollup/plugin-typescript": "^6.1.0",
     "@smui/button": "1.0.0-beta.20",
     "@smui/card": "1.0.0-beta.20",
     "@smui/checkbox": "1.0.0-beta.20",
@@ -48,6 +49,7 @@
     "@smui/tab-scroller": "1.0.0-beta.20",
     "@smui/textfield": "1.0.0-beta.20",
     "@smui/top-app-bar": "1.0.0-beta.20",
+    "@tsconfig/svelte": "^1.0.10",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "postcss-scss": "^2.0.0",
@@ -61,7 +63,10 @@
     "rollup-plugin-svelte": "^5.1.1",
     "rollup-plugin-terser": "^5.2.0",
     "sapper": "^0.27.9",
-    "svelte": "^3.18.1"
+    "svelte": "^3.18.1",
+    "svelte-check": "^1.1.8",
+    "svelte-preprocess": "^4.5.2",
+    "typescript": "^4.0.5"
   },
   "dependencies": {
     "@rollup/plugin-commonjs": "^11.0.2",
