--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.9.0",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-svelte": "^5.2.3",
+    "rollup-plugin-svelte": "~6.1.1",
     "rollup-plugin-terser": "^5.3.1",
     "sapper": "^0.27.16",
     "svelte": "^3.29.7",
