--- a/package.json
+++ b/package.json
@@ -50,19 +50,24 @@
     "@smui/textfield": "1.0.0-beta.20",
     "@smui/top-app-bar": "1.0.0-beta.20",
     "@tsconfig/svelte": "^1.0.10",
+    "less": "^3.12.2",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "postcss-scss": "^2.1.1",
+    "pug": "^3.0.0",
     "rollup-plugin-alias": "^2.2.0",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^2.9.0",
+    "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-svelte": "~6.1.1",
     "rollup-plugin-terser": "^5.3.1",
     "sapper": "^0.27.16",
+    "sass": "^1.29.0",
+    "stylus": "^0.54.8",
+    "sugarss": "^3.0.3",
     "svelte": "^3.29.7",
     "svelte-check": "^1.1.13",
     "svelte-preprocess": "^4.6.0",
