--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start": "sirv public"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
+    "@babel/core": "^7.12.9",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
     "@babel/runtime": "^7.12.5",
     "@material/elevation": "^3.1.0",
     "@material/linear-progress": "^3.2.0",
@@ -50,6 +50,8 @@
     "@smui/textfield": "1.0.0-beta.20",
     "@smui/top-app-bar": "1.0.0-beta.20",
     "@tsconfig/svelte": "^1.0.10",
+    "@types/d3-interpolate": "^2.0.0",
+    "d3-interpolate": "^2.0.1",
     "less": "^3.12.2",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
@@ -68,15 +70,15 @@
     "sass": "^1.29.0",
     "stylus": "^0.54.8",
     "sugarss": "^3.0.3",
-    "svelte": "^3.29.7",
-    "svelte-check": "^1.1.13",
-    "svelte-preprocess": "^4.6.0",
-    "typescript": "^4.0.5"
+    "svelte": "^3.30.1",
+    "svelte-check": "^1.1.17",
+    "svelte-preprocess": "^4.6.1",
+    "typescript": "^4.1.2"
   },
   "dependencies": {
     "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
-    "rollup": "^2.33.3",
+    "rollup": "^2.34.0",
     "sirv-cli": "^0.4.6"
   }
 }
