--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "svelte-app",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public"
+    "start": "sirv public",
+    "test": "cross-env TS_NODE_FILES=true mocha --exit --require ts-node/register --colors test/**/*.ts",
+    "coverage": "nyc npm run test"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -50,11 +52,18 @@
     "@smui/textfield": "1.0.0-beta.20",
     "@smui/top-app-bar": "1.0.0-beta.20",
     "@tsconfig/svelte": "^1.0.10",
+    "@types/chai": "^4.1.7",
     "@types/d3-interpolate": "^2.0.0",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.6.9",
+    "chai": "^4.2.0",
+    "cross-env": "^5.2.1",
     "d3-interpolate": "^2.0.1",
     "less": "^3.12.2",
+    "mocha": "^6.2.0",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
+    "nyc": "^14.1.1",
     "postcss-scss": "^2.1.1",
     "pug": "^3.0.0",
     "rollup-plugin-alias": "^2.2.0",
@@ -73,6 +82,7 @@
     "svelte": "^3.30.1",
     "svelte-check": "^1.1.17",
     "svelte-preprocess": "^4.6.1",
+    "ts-node": "^8.3.0",
     "typescript": "^4.1.2"
   },
   "dependencies": {
