--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,7 @@
 
     // project config
     "include": [
-        "src",
-        "test"
+        "src"
     ],
     "typeRoots": [
         "./node_modules/@types/mocha",
