Введение переделано по типу истории. Добавлена возможность выключить их прямо в компоненте. tsconfig разделён на три части для устранения конфликтов

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,9 +25,9 @@
     },
 
     // project config
-    "include": [
-        "src"
-    ],
+    // "include": [
+    //     "src"
+    // ],
     "typeRoots": [
         "./node_modules/@types/mocha",
         "./node_modules/@types/chai",
